--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "tathmini-config-server",
-  "version": "1.0.0",
-  "description": "TathminiAI Configuration Server for Multi-Project Management",
+  "name": "tathmini-complete-platform",
+  "version": "2.0.0",
+  "description": "TathminiAI Complete Research Platform",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   },
   "engines": {
     "node": ">=14.0.0"
